<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_mode"
        android:icon="@drawable/baseline_sort_white_24"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_popular"
                    android:checked="true"
                    android:title="@string/action_sort_popular" />
                <item
                    android:id="@+id/action_sort_rating"
                    android:title="@string/action_sort_rating" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_white_24"
        android:orderInCategory="2"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
