<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_sort_popular"
        android:icon="@drawable/bottom_navigation_popular_icons"
        android:orderInCategory="1"
        android:title="@string/action_sort_popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_sort_rating"
        android:icon="@drawable/bottom_navigation_top_rated_icons"
        android:orderInCategory="2"
        android:title="@string/action_sort_rating"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/bottom_navigation_favourite_icons"
        android:orderInCategory="3"
        android:title="@string/action_favourite"
        app:showAsAction="never" />
</menu>
