<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.tejus.popularmovies.model.Movie" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:contentDescription="@string/details_poster_description"
                android:scaleType="fitStart"
                app:layout_constraintDimensionRatio="h,1:1.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:loadPoster="@{movie.posterPath}" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mid_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/mid_margin"
                android:fontFamily="@font/opensansregular"
                android:text="@{movie.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mid_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/opensansregular"
                android:text="@{movie.releaseDate}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mid_margin"
                android:fontFamily="@font/opensansregular"
                android:text='@{String.format("%.1f", movie.rating)}'
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_poster" />

            <TextView
                android:id="@+id/tv_rating_denom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensansregular"
                android:text="@string/details_rating_max"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_rating"
                app:layout_constraintStart_toEndOf="@+id/tv_rating" />

            <ToggleButton
                android:id="@+id/toggle_favourite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@drawable/button_favourite"
                android:backgroundTint="@color/colorAccent"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@id/iv_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tv_overview_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="@font/opensansregular"
                android:text="@string/details_overview_heading"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:fontFamily="@font/opensansregular"
                android:paddingBottom="@dimen/large_margin"
                android:text="@{movie.overview}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_heading" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
